WEB-5802 - Fixed broken CSS.

--- a/fid-web/src/main/webapp/style/sass/components/_header.scss
+++ b/fid-web/src/main/webapp/style/sass/components/_header.scss
@@ -71,7 +71,7 @@
 
 		//My Saved items overrides
 		.saved-items {
-		  	overflow-y: scroll;
+		  	overflow-y: auto!important;
 			#mySavedItemsLink {
 				padding-left: 10px;
 				color: $red;
